feat: invoice list view created

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,5 @@
     hello world
 {% endblock title %}
 {% block content %}
-    hello world
+    hello world - {{ obj_.number }}
 {% endblock content %}
