--- a/invoices/templates/invoices/main.html
+++ b/invoices/templates/invoices/main.html
@@ -3,7 +3,7 @@
     home
 {% endblock title %}
 {% block content %}
-    {% for  object in object_list  %}
+    {% for  object in qs  %}
         <b>
             {{ object.number }}
         </b>
