--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand text-light">Invoice App</a>
-        <a class="btn btn-outline-light">+ New</a>
+        <a href="{% url 'invoices:main' %}" class="navbar-brand text-light">Invoice App</a>
+        <a href="{% url 'invoices:create' %}" class="btn btn-outline-light">+ New</a>
     </div>
 </nav>
