--- a/invoices/templates/invoices/main.html
+++ b/invoices/templates/invoices/main.html
@@ -3,10 +3,44 @@
     home
 {% endblock title %}
 {% block content %}
-    {% for  object in qs  %}
-        <b>
-            {{ object.number }}
-        </b>
-        <br>
-    {% endfor %}
+    {% if qs %}
+        {% for  object in qs  %}
+            <b>
+                <div class="card mb-2" style="width:100%">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ object.number }} - {{ object.receiver.name }}</h5>
+                        <div class="card-text">Completion Date: {{ object.completion_date }}</div>
+                        <div class="text-muted">Amount: ${{ object.total_amount }}</div>
+                        <div class="mt-2">
+                            <a href="#" class="btn btn-primary">details</a>
+                            <a href="#" class="btn btn-info">update</a>
+                        </div>
+                    </div>
+                </div>
+            </b>
+            <br>
+        {% endfor %}
+    {% else %}
+        <h3>No invoices created</h3>
+    {% endif %}
+    {% if is_paginated %}
+        <nav aria-label="invoice pagination">
+            <ul class="pagination">
+                <li class="page-item {% if page_obj.has_previous %} {% else %}disabled{% endif %}">
+                    <a {% if page_obj.has_previous %} href="?page={{ obj.previous_page_number }}"{% endif %}
+                       class="page-link">Previous</a>
+                </li>
+                {% for i in paginator.page_range  %}
+                    <li class="page-item {% if page_obj.number == i %} active{% endif %}">
+                        <a class="page-link" href="?page={{i}}">{{i }}</a>
+                    </li>
+                {% endfor %}
+                <li class="page-item {% if page_obj.has_next %} {% else %} disabled {% endif %} ">
+                    <a {% if page_obj.has_next %} href="?page={{ page_obj.next_page_number }}"{% endif %}
+                       class="page-link">Next</a>
+                </li>
+            </ul>
+        </nav>
+    {% else %}
+    {% endif %}
 {% endblock content %}
