feat: added invoice detail

--- a/invoices/templates/invoices/main.html
+++ b/invoices/templates/invoices/main.html
@@ -12,7 +12,8 @@
                         <div class="card-text">Completion Date: {{ object.completion_date }}</div>
                         <div class="text-muted">Amount: ${{ object.total_amount }}</div>
                         <div class="mt-2">
-                            <a href="#" class="btn btn-primary">details</a>
+                            <a href="{% url 'invoices:simple-template' object.pk %}"
+                               class="btn btn-primary">details</a>
                             <a href="#" class="btn btn-info">update</a>
                         </div>
                     </div>
