--- a/invoices/templates/invoices/main.html
+++ b/invoices/templates/invoices/main.html
@@ -3,6 +3,12 @@
     home
 {% endblock title %}
 {% block content %}
+    {% if messages %}
+        {% for message in messages  %}
+            {% if message.tags == 'info' %}<div class="alert alert-primary mt-2">{{ message }}</div>{% endif %}
+        {% endfor %}
+    {% else %}
+    {% endif %}
     {% if qs %}
         {% for  object in qs  %}
             <b>
@@ -14,7 +20,7 @@
                         <div class="mt-2">
                             <a href="{% url 'invoices:simple-template' object.pk %}"
                                class="btn btn-primary">details</a>
-                            <a href="#" class="btn btn-info">update</a>
+                            <a href="{% url 'invoices:update' object.pk %}" class="btn btn-info">update</a>
                         </div>
                     </div>
                 </div>
