--- a/invoices/templates/invoices/main.html
+++ b/invoices/templates/invoices/main.html
@@ -34,7 +34,7 @@
         <nav aria-label="invoice pagination">
             <ul class="pagination">
                 <li class="page-item {% if page_obj.has_previous %} {% else %}disabled{% endif %}">
-                    <a {% if page_obj.has_previous %} href="?page={{ obj.previous_page_number }}"{% endif %}
+                    <a {% if page_obj.has_previous %} href="?page={{ page_obj.previous_page_number }}"{% endif %}
                        class="page-link">Previous</a>
                 </li>
                 {% for i in paginator.page_range  %}
