--- a/invoices/templates/invoices/detail.html
+++ b/invoices/templates/invoices/detail.html
@@ -3,5 +3,48 @@
     Detail Page
 {% endblock title %}
 {% block content %}
+    {% if messages %}
+        {% for message in messages  %}
+            {% if message.tags == 'info' %}<div class="alert alert-primary mt-2">{{ message }}</div>{% endif %}
+        {% endfor %}
+    {% endif %}
+    <div class="mt-3">
+        <h5>Receiver: {{ object.receiver.name }}</h5>
+        <hr>
+        <h3>Positions</h3>
+        {% if qs %}
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Descrtiption</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in qs %}
+                        <tr style="vertical-align:middle;">
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ item.title }}</td>
+                            <td>{{ item.description }}</td>
+                            <td>@{{ item.amount }}</td>
+                            {% if not object.closed %}
+                                <td>
+                                    <a href="#" class="btn btn-danger">x</a>
+                                </td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <div class="mt-2 text-end">
+                <h2>Total Amount: ${{ object.total_amount }}</h2>
+            </div>
+        {% else %}
+            <h5>No positions added...</h5>
+        {% endif %}
+    </div>
     {{ object.completion_date }}
 {% endblock content %}
