--- a/invoices/templates/invoices/detail.html
+++ b/invoices/templates/invoices/detail.html
@@ -1,8 +1,71 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %}
     Detail Page
 {% endblock title %}
 {% block content %}
+    <div class="modal fade"
+         id="addPositionsModal"
+         tabindex="-1"
+         aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Position</h5>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade"
+         id="closeInoiceModal"
+         tabindex="-1"
+         aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">...</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        {% if not object.closed %}
+            <button type="button"
+                    class="btn btn-primary"
+                    data-bs-toggle="modal"
+                    data-bs-target="#addPositionsModal">
+                + add positions
+            </button>
+            <button type="button"
+                    class="btn btn-warning"
+                    data-bs-toggle="modal"
+                    data-bs-target="#closeInoiceModal">close</button>
+        {% else %}
+            <a href="#" class="btn btn-danger">pdf</a>
+        {% endif %}
+    </div>
     {% if messages %}
         {% for message in messages  %}
             {% if message.tags == 'info' %}<div class="alert alert-primary mt-2">{{ message }}</div>{% endif %}
