--- a/invoices/templates/invoices/detail.html
+++ b/invoices/templates/invoices/detail.html
@@ -94,7 +94,8 @@
                             <td>@{{ item.amount }}</td>
                             {% if not object.closed %}
                                 <td>
-                                    <a href="#" class="btn btn-danger">x</a>
+                                    <a href="{% url 'invoices:position-delete' object.pk item.pk %}"
+                                       class="btn btn-danger">x</a>
                                 </td>
                             {% else %}
                                 <td>closed</td>
